tests/macros/select/mask.rs
fn main() {
    let q = discourse::questions![Select { mask: todo!() }];
}
